# slinky

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .travis.yml  BUILD  CMakeLists.txt  GEMINI.md  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  run-clang-format.sh
.github/workflows/: ci.yml  pages.yml  publish-docker.yml
apps/: BUILD  benchmark.h  memcpy.cc  performance.cc
base/: BUILD  allocator.h  arithmetic.cc  arithmetic.h  atomic_wait.h  chrome_trace.cc  chrome_trace.h  embedded_vector.h  flat_set.h  function_ref.h  modulus_remainder.cc  modulus_remainder.h  ref_count.h  set.h  span.h  thread_pool.cc  thread_pool.h  thread_pool_impl.cc  thread_pool_impl.h  thread_synchronization.h  util.h
base/test/: BUILD  arithmetic.cc  arithmetic_benchmark.cc  atomic_wait_benchmark.cc  bazel_util.cc  bazel_util.h  flat_set.cc  modulus_remainder.cc  seeded_test.h  set.cc  thread_pool.cc  thread_pool_benchmark.cc
builder/: BUILD  bazel_util.h  checks_test.cc  copy_test.cc  cse.cc  cse.h  elementwise_test.cc  func.cc  func.h  infer_bounds.cc  infer_bounds.h  modulus_remainder.cc  modulus_remainder.h  node_mutator.cc  node_mutator.h  optimizations.cc  optimizations.h  pipeline.cc  pipeline.h  pipeline_test.cc  replica_pipeline.cc  replica_pipeline.h  replica_pipeline_test.cc  rewrite.cc  rewrite.h  simplify.cc  simplify.h  simplify_bounds.cc  simplify_exprs.cc  simplify_rules.h  simplify_test.cc  slide_and_fold_storage.cc  slide_and_fold_storage.h  substitute.cc  substitute.h  substitute_test.cc  test_util.h
builder/test/: BUILD  aligned_producer.cc  auto_stack_threshold.cc  cannot_alias.cc  checks.cc  context.cc  context.h  copy.cc  copy_pipeline.cc  cse.cc  elementwise.cc  funcs.h  l2_norm.cc  optimizations.cc  pipeline.cc  pyramid.cc  replica_pipeline.cc  rewrite.cc  simplify.cc  simplify_rules.cc  softmax.cc  stencil.cc  stencil_pipeline.cc  substitute.cc  tile_area.cc  util.cc  util.h
builder/visualize/: concatenate_0.html  concatenate_1.html  padded_stencil_0.html  padded_stencil_1.html  padded_stencil_2.html  parallel_stencils_0.html  parallel_stencils_1.html  parallel_stencils_2.html  stencil_chain_split_0.html  stencil_chain_split_1.html  stencil_chain_split_2.html  stencil_chain_split_serial_split_0.html  stencil_chain_split_serial_split_1.html  stencil_chain_split_serial_split_2.html  stencil_split_0.html  stencil_split_1.html  stencil_split_2.html  stencil_split_3.html
docker/: Dockerfile.hexagon-oss
runtime/: BUILD  arithmetic_test.cc  buffer.cc  buffer.h  buffer_benchmark.cc  buffer_test.cc  chrome_trace.cc  chrome_trace.h  depends_on.cc  depends_on.h  depends_on_test.cc  evaluate.cc  evaluate.h  evaluate_benchmark.cc  evaluate_test.cc  expr.cc  expr.h  expr_stmt.cc  pipeline.cc  pipeline.h  print.cc  print.h  stmt.h  thread_pool.cc  thread_pool.h  util.h  validate.cc  validate.h  visualize.cc  visualize.h
runtime/test/: BUILD  arithmetic.cc  buffer.cc  buffer.h  buffer_benchmark.cc  (+4 more)
slinky/apps/: BUILD  CMakeLists.txt  benchmark.h  memcpy.cc  performance.cc
slinky/base/: BUILD  CMakeLists.txt  arithmetic.cc  arithmetic.h  chrome_trace.cc  function_ref.h  modulus_remainder.h  ref_count.h  span.h  tagged_ptr.h  thread_pool.cc  thread_pool.h  thread_pool_impl.cc  thread_pool_impl.h  thread_synchronization.h  util.h
slinky/base/test/: BUILD  CMakeLists.txt  arithmetic.cc  arithmetic_benchmark.cc  atomic_wait_benchmark.cc  bazel_util.cc  bazel_util.h  cmake_util.cc  modulus_remainder.cc  seeded_test.h  set.cc  thread_pool.cc  thread_pool_benchmark.cc
slinky/builder/: BUILD  CMakeLists.txt  node_mutator.cc  node_mutator.h  optimizations.cc  optimizations.h  pipeline.cc  pipeline.h  replica_pipeline.cc  replica_pipeline.h  rewrite.cc  rewrite.h  simplify.cc  simplify.h  simplify_bounds.cc  simplify_exprs.cc  simplify_rules.h  slide_and_fold_storage.cc  slide_and_fold_storage.h  substitute.cc  substitute.h
slinky/builder/test/: BUILD  CMakeLists.txt  aligned_producer.cc  auto_stack_threshold.cc  cannot_alias.cc  checks.cc  context.cc  context.h  copy.cc  copy_pipeline.cc  elementwise.cc  funcs.h  l2_norm.cc  optimizations.cc  pipeline.cc  pyramid.cc  replica_pipeline.cc  rewrite.cc  softmax.cc  stencil.cc  stencil_pipeline.cc  substitute.cc  tile_area.cc  util.cc  util.h
slinky/builder/test/simplify/: BUILD  CMakeLists.txt  add_sub_rules.cc  equal_rules.cc  expr_generator.h  less_rules.cc  max_rules.cc  min_rules.cc  mul_div_mod_rules.cc  rule_tester.h  rules.cc  simplify.cc
slinky/builder/test/visualize/: padded_stencil_0.html  padded_stencil_1.html  padded_stencil_2.html  parallel_stencils_0.html  parallel_stencils_1.html  parallel_stencils_2.html  softmax_split_0.html  softmax_split_1.html  softmax_split_4.html  stencil_chain_split_serial_split_0.html  stencil_chain_split_serial_split_1.html  stencil_chain_split_serial_split_2.html  stencil_chain_split_serial_split_3.html  stencil_chain_split_serial_split_4.html  stencil_split_0.html  stencil_split_1.html  stencil_split_2.html  stencil_split_3.html
slinky/runtime/: BUILD  CMakeLists.txt  buffer.cc  buffer.h  depends_on.cc  depends_on.h  evaluate.cc  evaluate.h  expr.h  expr_stmt.cc  pipeline.cc  pipeline.h  print.cc  print.h  stmt.h  visualize.cc  visualize.h
slinky/runtime/test/: BUILD  CMakeLists.txt  buffer.cc  buffer_benchmark.cc  depends_on.cc  evaluate.cc  evaluate_benchmark.cc
src/: BUILD  arithmetic.h  buffer.cc  buffer.h  copy.cc  copy.h  euclidean_division.h  evaluate.cc  evaluate.h  expr.cc  expr.h  func.cc  func.h  infer_allocate_bounds.cc  infer_allocate_bounds.h  infer_bounds.cc  infer_bounds.h  interval.cc  interval.h  node_mutator.cc  node_mutator.h  optimizations.cc  optimizations.h  optimize_buffers.cc  optimize_buffers.h  pipeline.cc  pipeline.h  print.cc  print.h  ref_count.h  simplify.cc  simplify.h  span.h  substitute.cc  substitute.h  symbol_map.h  util.h
test/: BUILD  arithmetic.cc  buffer.cc  checks.cc  copy.cc  elementwise.cc  euclidean_division.cc  evaluate.cc  funcs.h  main.cc  performance.cc  pipeline.cc  simplify.cc  test.h  thread_pool.cc  thread_pool.h
(+31 files in other folders)
